--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
             <span class="chat-title">Atendimento</span>
             <span class="chat-user-label" id="chatUserLabel"></span>
           </div>
-          <button id="chatMinimizeBtn" class="icon-btn" aria-label="Minimizar chat">−</button>
+          <div class="header-actions">
+            <button id="logoutBtn" class="icon-btn hidden" aria-label="Sair" title="Sair">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+                <polyline points="16 17 21 12 16 7"></polyline>
+                <line x1="21" y1="12" x2="9" y2="12"></line>
+              </svg>
+            </button>
+            <button id="chatMinimizeBtn" class="icon-btn" aria-label="Minimizar chat">−</button>
+          </div>
         </header>
 
         <div id="userSetup" class="user-setup">
