--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <div id="userSetup" class="user-setup">
           <div class="setup-section">
             <label class="field-label" for="userPA">P.A</label>
-            <input id="userPA" type="text" class="text-input" readonly />
-            <p class="field-hint">Preenchido automaticamente pelos 3 últimos dígitos do seu IP.</p>
+            <input id="userPA" type="text" class="text-input" placeholder="Digite seu P.A" />
+            <p class="field-hint">Informe seu número de P.A (deve ser único).</p>
           </div>
 
           <div class="setup-section">
